cmake_minimum_required(VERSION 3.14)
project(cedb)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_SHARED_LIBRARY_SUFFIX ".plugin")
if(MSVC)
	add_compile_definitions(_USE_DLL)
	set(CMAKE_CXX_FLAGS "/utf-8 /EHsc")
	link_libraries(sobjd.lib sbioinfod.lib sappd.lib)
elseif(UNIX)
	if (DEFINED ENV{SLIB_INCLUDE})
		message(STATUS "SLIB_INCLUDE=$ENV{SLIB_INCLUDE}")
	else()
		set(ENV{SLIB_INCLUDE} ${CMAKE_INSTALL_PREFIX}/include/slib)
		message(STATUS "SLIB_INCLUDE=$ENV{SLIB_INCLUDE}")
	endif()
	if (DEFINED ENV{SLIB_DIR})
		message(STATUS "SLIB_DIR=$ENV{SLIB_DIR}")
	else()
		set(ENV{SLIB_DIR} ${CMAKE_INSTALL_PREFIX}/lib)
		message(STATUS "SLIB_DIR=$ENV{SLIB_DIR}")
	endif()
	set(CMAKE_CXX_FLAGS "-std=c++11 -O2")
	link_libraries(sobj sbioinfo sapp)
endif()
set(SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
include_directories(${SOURCE_DIR} $ENV{SLIB_INCLUDE})
link_directories($ENV{SLIB_DIR})
add_library(cedb SHARED adb_ce.cpp)